--- a/WeatherApp/WeatherApp/Module/FavouriteList/FavouriteList.storyboard
+++ b/WeatherApp/WeatherApp/Module/FavouriteList/FavouriteList.storyboard
@@ -14,7 +14,17 @@
                     <view key="view" contentMode="scaleToFill" id="VTl-tm-p4i">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YYv-rl-fLC">
+                                <rect key="frame" x="184" y="433" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="YYv-rl-fLC" firstAttribute="centerX" secondItem="VTl-tm-p4i" secondAttribute="centerX" id="YWD-MQ-BgJ"/>
+                            <constraint firstItem="YYv-rl-fLC" firstAttribute="centerY" secondItem="VTl-tm-p4i" secondAttribute="centerY" id="sxT-HE-bjN"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="MMs-qj-erN"/>
                     </view>
                 </viewController>
