--- a/WeatherApp/WeatherApp/Module/FavouriteList/FavouriteList.storyboard
+++ b/WeatherApp/WeatherApp/Module/FavouriteList/FavouriteList.storyboard
@@ -18,6 +18,10 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0kj-gS-Yp3">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="pHI-DZ-d9n" id="eLy-Ng-kwV"/>
+                                    <outlet property="delegate" destination="pHI-DZ-d9n" id="zQ4-De-k0b"/>
+                                </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xBN-Yc-jC6">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
